--- a/Cat Herder.csproj
+++ b/Cat Herder.csproj
@@ -247,6 +247,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\ControlledMovement.cs" />
+    <Compile Include="Assets\Goal.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
