--- a/Cat Herder.csproj
+++ b/Cat Herder.csproj
@@ -248,6 +248,8 @@
   <ItemGroup>
     <Compile Include="Assets\ControlledMovement.cs" />
     <Compile Include="Assets\Goal.cs" />
+    <Compile Include="Assets\LevelController.cs" />
+    <Compile Include="Assets\LevelTimer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
