--- a/Cat Herder.csproj
+++ b/Cat Herder.csproj
@@ -246,11 +246,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Bark.cs" />
-    <Compile Include="Assets\ControlledMovement.cs" />
-    <Compile Include="Assets\Goal.cs" />
-    <Compile Include="Assets\LevelController.cs" />
-    <Compile Include="Assets\LevelTimer.cs" />
+    <Compile Include="Assets\Scripts\Bark.cs" />
+    <Compile Include="Assets\Scripts\ControlledMovement.cs" />
+    <Compile Include="Assets\Scripts\Goal.cs" />
+    <Compile Include="Assets\Scripts\LevelController.cs" />
+    <Compile Include="Assets\Scripts\LevelTimer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
