--- a/Cat Herder.csproj
+++ b/Cat Herder.csproj
@@ -246,6 +246,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Angle.cs" />
     <Compile Include="Assets\Scripts\Bark.cs" />
     <Compile Include="Assets\Scripts\Cat.cs" />
     <Compile Include="Assets\Scripts\ControlledMovement.cs" />
