--- a/Cat Herder.csproj
+++ b/Cat Herder.csproj
@@ -301,6 +301,7 @@
     <Compile Include="Assets\Scripts\Goal.cs" />
     <Compile Include="Assets\Scripts\LevelController.cs" />
     <Compile Include="Assets\Scripts\LevelTimer.cs" />
+    <Compile Include="Assets\Scripts\MoveAnimation.cs" />
     <Compile Include="Assets\Scripts\ProgressBar.cs" />
     <Compile Include="Assets\Scripts\RotateToDirection.cs" />
     <Compile Include="Assets\Scripts\Tutorial.cs" />
